# project_ai_reporter

./: env.example  pyproject.toml
src/project_ai_reporter/: crew.py  main.py
src/project_ai_reporter/config/: agents.yaml  tasks.yaml
